# rsutils

./: LICENSE  Makefile  README.md
mk/: common.prog.mk
usr.bin/: Makefile
usr.bin/base32/: Cargo.toml  Makefile
usr.bin/base32/man/: base32.1
usr.bin/base32/src/: main.rs
usr.bin/base64/: Cargo.toml  Makefile
usr.bin/base64/man/: base64.1
usr.bin/base64/src/: main.rs
usr.bin/basename/: Cargo.toml  Makefile
usr.bin/basename/man/: basename.1
usr.bin/basename/src/: main.rs
usr.bin/dirname/: Cargo.toml  Makefile
usr.bin/dirname/man/: dirname.1
usr.bin/dirname/src/: main.rs
usr.bin/factor/: Cargo.toml  Makefile  README.md
usr.bin/factor/man/: factor.1
usr.bin/factor/src/: main.rs
usr.bin/fold/: Cargo.toml  Makefile
usr.bin/fold/man/: fold.1
usr.bin/fold/src/: main.rs
usr.bin/mk/: common.prog.mk
usr.bin/nproc/: Cargo.toml  Makefile
usr.bin/nproc/man/: nproc.1
usr.bin/nproc/src/: main.rs
usr.bin/readlink/: Cargo.toml  Makefile
usr.bin/readlink/man/: readlink.1
usr.bin/readlink/src/: main.rs
usr.bin/rev/: Cargo.toml  Makefile
usr.bin/rev/man/: rev.1
usr.bin/rev/src/: main.rs
usr.bin/wc/: Cargo.toml  Makefile
usr.bin/wc/man/: wc.1
usr.bin/wc/src/: main.rs
usr.bin/yes/: Cargo.toml  Makefile
usr.bin/yes/man/: yes.1
usr.bin/yes/src/: main.rs
