[package]
name = "base64"
version = "0.1.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
base64 = "0.13.0"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
