[package]
name = "dirname"
version = "0.1.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
