[package]
name = "fold"
version = "0.1.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
textwrap = "0.12"

[profile.release]
lto = true
codegen-units = 1
